// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H1_TO_TITLE basic 1`] = `
Object {
  "anchors": Object {},
  "body": "## Foo Content

",
  "children": Array [],
  "contentHash": undefined,
  "created": 1,
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "foo",
  "id": "foo",
  "links": Array [],
  "parent": null,
  "title": "Foo Header",
  "type": "note",
  "updated": 1,
  "vault": Object {
    "fsPath": "vault1",
  },
}
`;

exports[`H1_TO_TITLE basic 2`] = `
Object {
  "anchors": Object {},
  "body": "## Bar Content

",
  "children": Array [],
  "contentHash": undefined,
  "created": 1,
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "bar",
  "id": "bar",
  "links": Array [],
  "parent": null,
  "title": "Bar Header",
  "type": "note",
  "updated": 1,
  "vault": Object {
    "fsPath": "vault1",
  },
}
`;

exports[`H1_TO_TITLE basic pass candidates opts 1`] = `
Object {
  "anchors": Object {},
  "body": "## Foo Content

",
  "children": Array [],
  "contentHash": undefined,
  "created": 1,
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "foo",
  "id": "foo",
  "links": Array [],
  "parent": null,
  "title": "Foo Header",
  "type": "note",
  "updated": 1,
  "vault": Object {
    "fsPath": "vault1",
  },
}
`;

exports[`H1_TO_TITLE basic pass candidates opts 2`] = `
Object {
  "anchors": Object {},
  "body": "# Bar Header
## Bar Content",
  "children": Array [],
  "contentHash": undefined,
  "created": 1,
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "bar",
  "id": "bar",
  "links": Array [],
  "parent": null,
  "title": "Bar",
  "type": "note",
  "updated": 1,
  "vault": Object {
    "fsPath": "vault1",
  },
}
`;

exports[`h1 to h2 basic 1`] = `
Object {
  "anchors": Object {},
  "body": "## Foo Header

## Foo Content

",
  "children": Array [],
  "contentHash": undefined,
  "created": 1,
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "foo",
  "id": "foo",
  "links": Array [],
  "parent": null,
  "title": "Foo",
  "type": "note",
  "updated": 1,
  "vault": Object {
    "fsPath": "vault1",
  },
}
`;

exports[`h1 to h2 basic 2`] = `
Object {
  "anchors": Object {},
  "body": "## Bar Header

## Bar Content

",
  "children": Array [],
  "contentHash": undefined,
  "created": 1,
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "bar",
  "id": "bar",
  "links": Array [],
  "parent": null,
  "title": "Bar",
  "type": "note",
  "updated": 1,
  "vault": Object {
    "fsPath": "vault1",
  },
}
`;

exports[`h1 to h2 basic pass candidates opt 1`] = `
Object {
  "anchors": Object {},
  "body": "## Foo Header

## Foo Content

",
  "children": Array [],
  "contentHash": undefined,
  "created": 1,
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "foo",
  "id": "foo",
  "links": Array [],
  "parent": null,
  "title": "Foo",
  "type": "note",
  "updated": 1,
  "vault": Object {
    "fsPath": "vault1",
  },
}
`;

exports[`h1 to h2 basic pass candidates opt 2`] = `
Object {
  "anchors": Object {},
  "body": "# Bar Header
## Bar Content",
  "children": Array [],
  "contentHash": undefined,
  "created": 1,
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "bar",
  "id": "bar",
  "links": Array [],
  "parent": null,
  "title": "Bar",
  "type": "note",
  "updated": 1,
  "vault": Object {
    "fsPath": "vault1",
  },
}
`;

exports[`h1 to h2 dry run 1`] = `
Object {
  "anchors": Object {},
  "body": "# Foo Header
## Foo Content",
  "children": Array [],
  "contentHash": undefined,
  "created": 1,
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "foo",
  "id": "foo",
  "links": Array [],
  "parent": null,
  "title": "Foo",
  "type": "note",
  "updated": 1,
  "vault": Object {
    "fsPath": "vault1",
  },
}
`;

exports[`h1 to h2 dry run 2`] = `
Object {
  "anchors": Object {},
  "body": "# Bar Header
## Bar Content",
  "children": Array [],
  "contentHash": undefined,
  "created": 1,
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "bar",
  "id": "bar",
  "links": Array [],
  "parent": null,
  "title": "Bar",
  "type": "note",
  "updated": 1,
  "vault": Object {
    "fsPath": "vault1",
  },
}
`;
